# toon-rust

./: CLAUDE.md  Cargo.toml  README.md  SPEC.md
cli/: Cargo.toml
cli/src/: main.rs
serde_toon2/: API_DESIGN.md  API_RESEARCH.md  Cargo.toml  README.md  REQUIREMENTS.md
serde_toon2/src/: de.rs  error.rs  lib.rs  options.rs  ser.rs  value.rs
serde_toon2/tests/: test_complex.rs  test_deserializer.rs  test_fixtures.rs  test_reversibility.rs  test_serializer.rs
test/: github_users.json  github_users.toon  github_users.yaml  test.json  test.toon  test.yaml
