[package]
name = "toon"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "toon"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.51", features = ["derive"] }
reqwest = "0.12.24"
tokio = { version = "1.48.0", features = ["full"] }
serde_toon2 = { path = "../serde_toon2" }
serde_json = "1.0.145"
