[package]
name = "serde_toon2"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
indexmap = { version = "2.0", features = ["serde"] }
regex = "1.0"

[dev-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
datatest-stable = "0.3.3"

[[test]]
name = "test_fixtures"
harness = false
